Dowgrade junit 4